--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="./landingpage.css">
 </head>
 <body>
-    
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ipsum quasi necessitatibus deleniti delectus repudiandae!</h1>
 </body>
 </html>
